personalised the boilerplate and removed excesses

--- a/html-QG-boilerplate.html
+++ b/html-QG-boilerplate.html
@@ -68,7 +68,7 @@
 			}
 		</style>
 
-		<!-- -------Other stylesheets, and scripts---------- -->
+		<!-- -------Other stylesheets---------- -->
 
 		<link rel="stylesheet" href="#" />
 		<link rel="stylesheet" href="#" />
@@ -100,10 +100,10 @@
 			<main class="main">
 				<!-- -------START OF HERO SECTION------- -->
 				<section></section>
-
-				<!-- -------start of FOOTER section------- -->
-				<footer></footer>
 			</main>
+
+			<!-- -------start of FOOTER section------- -->
+			<footer></footer>
 		</div>
 
 		<script defer src=""></script>
