added utilities/font folder and modified font

--- a/html-femijosepho-boilerplate-3.html
+++ b/html-femijosepho-boilerplate-3.html
@@ -58,7 +58,7 @@
 				font-weight: 400;
 
 				src: local("Nunito"),
-					url("../../utilities/fonts/nunito-v26-latin-regular.woff2")
+					url("../utilities/fonts/nunito-v26-latin-regular.woff2")
 						format("woff2");
 			}
 
@@ -69,7 +69,7 @@
 				font-weight: 400;
 
 				src: local("Montagu Slab"),
-					url("../../utilities/fonts/montagu-slab-v12-latin-regular.woff2")
+					url("../utilities/fonts/montagu-slab-v12-latin-regular.woff2")
 						format("woff2");
 			}
 		</style>
