localised normalise & gave option to get jquery locally

--- a/html-QG-boilerplate.html
+++ b/html-QG-boilerplate.html
@@ -35,12 +35,12 @@
 
 		<!-- -----------------CSS Resets-------------------- -->
 		<!-- Use Normalize Reset -->
-		<link rel="stylesheet" href="../../css-resets/normalize.css" />
+		<link rel="stylesheet" href="./css resets/normalize.css" />
 
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://necolas.github.io/normalize.css/latest/normalize.css"
-		/>
+		/> -->
 
 		<!-- -----------------FONTS (loaded for a start)-------------------- -->
 
@@ -74,13 +74,21 @@
 		<link rel="stylesheet" href="#" />
 
 		<!-- --------------JQUERY ACCESS via CDN and via Local server----------------- -->
-		<script
+		<!-- <script
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 
-		<!-- <script src="../js-components/jquery-3.7.1.min.js"></script> -->
+		<script src="#find jquery-3.7.1.min.js locally"></script>
+
+		<!-- *---SWIPER (if you need it)--- -->
+		<!-- <link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+		/>
+
+		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
 
 		<!-- ----------Page Title---------- -->
 		<title>Page Title</title>
