--- a/html-femijosepho-boilerplate-1.html
+++ b/html-femijosepho-boilerplate-1.html
@@ -7,7 +7,9 @@
 		
 		<!-- *------CSS Resets------- -->
 		<!-- Use Normalize Reset -->
-		<link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+		<!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css"> -->
+
+		<link rel="stylesheet" href="./css resets/normalize.css">
 
 		<!-- *-------Stylesheet-------- -->
 		<link rel="stylesheet" href="link-to-css-file" />
@@ -17,11 +19,11 @@
 		<script src="#find jquery-3.7.1.min.js locally"></script>
 
 		<!-- Online -->
-		<script
+		<!-- <script
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 
 		<title>Title</title>
 	</head>
