--- a/html-femijosepho-boilerplate-2.html
+++ b/html-femijosepho-boilerplate-2.html
@@ -7,12 +7,12 @@
 
 		<!-- *-----------CSS Resets-------------- -->
 		<!-- Use Normalize Reset -->
-		<link rel="stylesheet" href="../../css-resets/normalize.css" />
+		<link rel="stylesheet" href="./css resets/normalize.css" />
 
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://necolas.github.io/normalize.css/latest/normalize.css"
-		/>
+		/> -->
 
 		<!-- *-----------CSS PRESET-------------- -->
 		<!-- Use femijosepho Preset -->
@@ -56,11 +56,11 @@
 		<script src="#find jquery-3.7.1.min.js locally"></script>
 
 		<!-- Online -->
-		<script
+		<!-- <script
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 
 		<!-- *----------Page Title---------- -->
 		<title>Page Title</title>
