--- a/html-femijosepho-boilerplate-3.html
+++ b/html-femijosepho-boilerplate-3.html
@@ -33,12 +33,12 @@
 
 		<!-- *-----------------CSS Resets-------------------- -->
 		<!-- Use Normalize Reset -->
-		<link rel="stylesheet" href="../../css-resets/normalize.css" />
+		<link rel="stylesheet" href="./css resets/normalize.css" />
 
-		<link
+		<!-- <link
 			rel="stylesheet"
 			href="https://necolas.github.io/normalize.css/latest/normalize.css"
-		/>
+		/> -->
 
 		<!-- *-----------------CSS PRESET-------------------- -->
 		<!-- Use femijosepho Preset -->
@@ -80,14 +80,14 @@
 
 		<!-- *------JQUERY ACCESS via CDN and via Local server------- -->
 		<!-- Local -->
-		<script src="./jquery-3.7.1.min.js"></script>
+		<script src="#find jquery-3.7.1.min.js locally"></script>
 
 		<!-- Online -->
-		<script
+		<!-- <script
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 
 		<!-- *---SWIPER (if you need it)--- -->
 		<!-- <link
